# dfm-server

./: .gitignore  CLAUDE.md  README.md  add_crafter_tasks.py  benchmark.py  compare_experiments.py  forecast_animation.py  pyproject.toml  search_demo.py  test_kv_cache.py  throughput.py
benchmark/: analysis.ipynb  eval_prediction.py  eval_rl.py  forecast_visualization.py
benchmark/results/: results.csv
benchmark/results_nontrivial/: results.csv
dfm_server/: client.py  model.py  schemas.py  search.py  server.py
scripts/: extract_tasks.py
slurm/: bench_baseline.slurm  bench_cross_human_to_llm.slurm  bench_cross_llm_to_human.slurm  bench_cross_rl_to_icl.slurm  bench_hold_rl_deepmath.slurm  bench_hold_rl_gsm8k.slurm  bench_hold_source_rl.slurm  bench_hold_student_dbekt22.slurm  bench_hold_student_duolingo.slurm  bench_hold_student_xes3g5m.slurm  bench_scale_1_eedi_only.slurm  bench_scale_2_all_students.slurm  bench_scale_3_students_rl.slurm  bench_scale_4_all_sources.slurm  benchmark.slurm  eval_llm.slurm  eval_llm_10.slurm  eval_llm_25.slurm  eval_llm_50.slurm  eval_llm_student.slurm  eval_rl.slurm  eval_rl10.slurm  eval_rl100.slurm  eval_rl1000 copy.slurm  eval_rl1000.slurm  eval_rl100_gen.slurm  eval_rl10_gen.slurm  eval_rl1_gen.slurm  eval_student.slurm
tests/: test_server.py
